<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/TitleText"
        android:id="@+id/login_title_text"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/title_activity_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout.Dense"
        android:id="@+id/email_input_layout"
        android:hint="@string/prompt_email"
        app:endIconMode="clear_text"
        app:endIconTint="@color/input_field_icon_color"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/login_title_text"
        app:layout_constraintStart_toStartOf="@+id/login_title_text"
        app:layout_constraintTop_toBottomOf="@+id/login_title_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout.Dense"
        android:id="@+id/password_input_layout"
        android:layout_marginTop="@dimen/view_margin"
        android:hint="@string/prompt_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/input_field_icon_color"
        app:layout_constraintEnd_toEndOf="@+id/login_title_text"
        app:layout_constraintStart_toStartOf="@+id/login_title_text"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout.Dense"
        android:id="@+id/confirm_password_input_layout"
        android:layout_marginTop="@dimen/view_margin"
        android:hint="@string/prompt_confirm_password"
        android:visibility="gone"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/input_field_icon_color"
        app:layout_constraintEnd_toEndOf="@+id/login_title_text"
        app:layout_constraintStart_toStartOf="@+id/login_title_text"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:alpha="0.8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="@id/password_input_layout"
        app:layout_constraintStart_toStartOf="@id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input_layout" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:id="@+id/text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        style="@style/OverlineText.StatementText"
        android:text="@string/powered_by_codeplay_studio"
        app:layout_constraintBottom_toBottomOf="@+id/bg_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/OverlineText.StatementText"
        android:id="@+id/version_text"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="@+id/bg_image"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Version 1.0.0" />

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>