<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        style="@style/OverlineText.StatementText"
        android:id="@+id/desc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_large"
        android:text="@string/add_network_desc"
        app:layout_constraintEnd_toEndOf="@+id/network_name_input_layout"
        app:layout_constraintStart_toStartOf="@id/network_name_input_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout.Dense"
        android:id="@+id/network_name_input_layout"
        android:layout_marginTop="@dimen/view_margin"
        android:hint="@string/network_name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/network_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout.Dense"
        android:id="@+id/password_input_layout"
        android:layout_marginTop="@dimen/view_margin"
        android:hint="@string/prompt_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/input_field_icon_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@null"
        android:contentDescription="@android:string/ok"
        android:src="@drawable/ic_baseline_check_circle_48"
        app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:background="@null"
        android:contentDescription="@android:string/cancel"
        android:src="@drawable/ic_baseline_cancel_48"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        app:layout_constraintTop_toTopOf="@+id/ok_button" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ok_button"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>